# DeepTutor

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.ghcr.yml  docker-compose.yml  pyproject.toml
assets/README/: README_AR.md  README_CN.md  README_ES.md  README_FR.md  README_HI.md  README_JA.md  README_PL.md  README_PT.md  README_RU.md  README_TH.md
assets/releases/: ver1-3-7.md  ver1-5-2.md  ver1-5-3.md
deeptutor/: __version__.py
deeptutor/agents/: __init__.py  base_agent.py
deeptutor/api/: main.py  run_server.py  security.py
deeptutor/app/: facade.py
deeptutor/auth/: __init__.py  cli_session.py  context.py  dependencies.py  migration.py  models.py  passwords.py  resource_ids.py  router.py  store.py
deeptutor/book/: context.py  engine.py  inputs.py  kb_health.py  storage.py
deeptutor/capabilities/: __init__.py  guided_learning.py  visualize.py
deeptutor/co_writer/: edit_agent.py
deeptutor/config/: settings.py
deeptutor/core/: i18n.py
deeptutor/i18n/: status_i18n.py
deeptutor/knowledge/: __init__.py  add_documents.py  connections.py  folders.py  info.py  initializer.py  manager.py  progress_tracker.py  providers.py  rawfiles.py  store.py  tasks.py  uploads.py
deeptutor/learning/: grading.py  models.py  storage.py
deeptutor/logging/: config.py  loguru_bridge.py  process_stream.py
deeptutor/multi_user/: audit.py  book_access.py  context.py  (+17 more)
deeptutor_cli/: auth_cmd.py  book.py  chat.py  common.py  config_cmd.py  init_cmd.py  init_wizard.py  kb.py  main.py  notebook.py  partner.py  plugin.py  provider_cmd.py  session_cmd.py  skill.py
docs/: SAAS_DEPLOYMENT_RUNBOOK.md  SAAS_READINESS_REVIEW.md  SAAS_TASK_PLAN.md  governance.md
packaging/deeptutor-cli/: pyproject.toml
requirements/: cli.txt  dev.txt  math-animator.txt  matrix.txt  partners.txt  server.txt
scripts/: check_install.py  imports.py  pb_setup.py  start_tour.py
standards/: contracts.md  errors.md  index.md  modules.md  operations.md  performance.md  review.md  security.md  testing.md  typing.md
tests/: __init__.py  conftest.py
web/: eslint.config.mjs  next.config.js  package-lock.json  package.json  proxy.ts  tsconfig.node-tests.json
(+647 files in other folders)
