[build-system]
requires = ["setuptools>=83.0.0", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deeptutor-cli"
dynamic = ["version"]
description = "CLI-only distribution for DeepTutor"
# Capped below 3.14 to match the main `deeptutor` package (issue #664): 3.14
# lacks wheels for some compiled base deps (e.g. faiss-cpu), so pip falls back
# to a source build that fails. Refuse 3.14 cleanly instead.
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
    "PyYAML>=6.0.3",
    "jinja2>=3.1.6",
    "openai>=2.45.0",
    "tiktoken>=0.13.0",
    "aiohttp>=3.14.1",
    "httpx>=0.28.1",
    "requests>=2.33.1,<2.34.0",  # arxiv 4.0.0 requires requests <2.34
    "ddgs>=9.14.4",
    "nest_asyncio>=1.6.0",
    "tenacity>=9.1.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "aiosqlite>=0.22.1",
    "typer>=0.25.1,<0.26.0",  # safety 3.8.1 requires typer <0.26
    "rich>=15.0.0",
    "prompt_toolkit>=3.0.52",
    "pyte>=0.8.2",
    "anthropic>=0.116.0",
    "dashscope>=1.26.3",
    "perplexityai>=0.40.0",
    "oauth-cli-kit>=0.1.6",
    "llama-index>=0.14.23",
    "llama-index-retrievers-bm25>=0.7.1,<0.8.0",
    # FAISS vector store: ANN retrieval replacing SimpleVectorStore brute force for
    # large KBs (issue #552); imported lazily with SimpleVectorStore fallback.
    "llama-index-vector-stores-faiss>=0.6.0,<1.0.0",
    "faiss-cpu>=1.14.3,<2.0.0",
    "PyMuPDF>=1.28.0",
    "numpy>=2.5.1,<3.0.0",
    "arxiv>=4.0.0",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
    "pypdf>=6.14.2",
    "pdfplumber>=0.11.10,<0.12.0",
    "reportlab>=5.0.0",
    "defusedxml>=0.7.1",
]

[project.scripts]
deeptutor = "deeptutor_cli.main:main"

[tool.setuptools]
package-dir = {"" = "../.."}
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "deeptutor.__version__.__version__"}

[tool.setuptools.packages.find]
where = ["../.."]
include = ["deeptutor*", "deeptutor_cli*"]
exclude = ["deeptutor_web*"]
